# ia-lab7-agente-adk-google

./: README.md
docs/: IA-UA09-Lab3-Python-Agent ADK Google.docx
lab/: .env.example  DEPENDENCIES.md  main.ipynb  pyproject.toml
