[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "google-adk>=2.1.0",
    "groq>=1.4.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
]
